# evedata-docs

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  Brewfile  CODE_OF_CONDUCT.md  LICENSE-CODE  Makefile  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml  publish.yml
docs/: index.md
docs/blog/: .authors.yml
docs/blog/posts/: building-evedata-in-the-open.md
includes/: abbreviations.md
